Fix Main Menu text alignment problems
Per https://phabricator.wikimedia.org/T229440#5490743, the text was not
aligned in the center. This should center it.

Bug: T229440

--- a/resources/skins.minerva.mainMenu.styles/MainMenuItem.less
+++ b/resources/skins.minerva.mainMenu.styles/MainMenuItem.less
@@ -63,6 +63,7 @@
 				span {
 					font-size: @font-size-minerva-small;
 					font-weight: bold;
+					vertical-align: middle;
 				}
 			}
 		}
